Updated week06 image

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -42,16 +42,16 @@
         </a>
       </div>
 
-      <nav>
-        <button id="hamburgerBtn">&#9776;</button>
-        <ul id="primaryNav">
-          <li><a href="index.html">Main</a></li>
-          <li><a href="discover.html">Discover Herriman</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
-          <li><a href="https://herriman.applicantpro.com/jobs/">Join Us</a>
-          </li>
-        </ul>
-      </nav>
+       <nav>
+          <button id="hamburgerBtn">&#9776;</button>
+          <ul id="primaryNav">
+            <li><a href="https://mjburn0428.github.io/WDD230/chamber/">Main</a></li>
+            <li><a href="discover.html">Discover Herriman</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
+            <li><a href="https://herriman.applicantpro.com/jobs/">Join Us</a></li>
+          </ul>
+        </nav>
+      
       <div class="headerDate"></div>
     </header>
     <main class="discover">
