--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,7 @@
       <nav>
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/">Main</a></li>
+          <li><a href="#">Main</a></li>
           <li><a href="discover.html">Discover Herriman</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
           <li><a href="https://herriman.applicantpro.com/jobs/">Join Us</a></li>
