--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <h2>Week 3 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson03/index3">Website planning document</a></li>
             <h2>Week 4 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/chamber/index">Chamber of Commerce</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/chamber/">Chamber of Commerce</a></li>
             <h2>Week 5 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson05/bom">BOM Top 25</a></li>
             <h2>Week 6 Lessons</h2>
-            <li><a href="lesson10/">Week 6 Lesson</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/chamber/">Chamber of Commerce</a></li>
             <h2>Week 7 Lessons</h2>
             <li><a href="lesson10/">Week 7 Lesson</a></li>
             <h2>Week 8 Lessons</h2>
