Updated week06 images and windchill update

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
     <script src="js/current_date.js" defer></script>
+    <script src="js/windchill.js" defer></script>
   </head>
   <body>
     <header>
