updated for week07

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Week 6 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/chamber/">Chamber of Commerce</a></li>
             <h2>Week 7 Lessons</h2>
-            <li><a href="lesson10/">Week 7 Lesson</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson07/">Week 7 Lesson</a></li>
             <h2>Week 8 Lessons</h2>
             <li><a href="lesson10/">Week 8 Lesson</a></li>
             <h2>Week 9 Lessons</h2>
