Updated week07 lazzyload

--- a/lesson07/lazyload.html
+++ b/lesson07/lazyload.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="lazyload.css">
 </head>
 <body>
-    <h1>Lazy Load Gallery</h1>
+    <h1>Week 07 Lazy Load Gallery</h1>
     <section class="gallery">
         <picture>
            <img src="https://via.placeholder.com/300x400" data-src="https://www.loremflickr.com/300/400/paris,girl">
