--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
     <script src="js/discover_script.js" defer></script>
+    <script src="js/current_date.js" defer></script>
+    <script src="js/lazyload.js" defer></script>
+    <script src="js/lastvisit.js" defer></script>
   </head>
   <body>
     <header>
@@ -54,38 +57,77 @@
       
       <div class="headerDate"></div>
     </header>
-    <main class="discover">
-      <picture class="discoverPic"
-        ><img
-          src="images/fort-herriman.png"
-          alt="Fort Herriman"
-          class="discoverImg"
-          data-src="images/fort-herriman.png"
-      /></picture>
-      <div class="blurb">
-        Fort Herriman (1854-1858) - A Mormon settler fort first established in 1854 by Thomas Butterfield, Henry Herriman, Samuel Egbert, Robert Petty and John Stocking. Abandoned in 1858 on orders from Brigham Young as Albert Sidney Johnston's Army approached.</div>
-      <div class="blurb">Herriman Chapel early days</div>
-      <picture class="discoverPic"
-        ><img
-          src="images/herriman-history.png"
-          alt="Herriman History" class="discoverImg" data-src="images/herriman-history.png"/></picture>
-      <picture class="discoverPic"
-        ><img
-          src="images/lost-house.png"
-          alt="lost house herriman"
-          class="discoverImg"
-          data-src="images/lost-house.png"
-      /></picture>
-      <div class="blurb">This house, formerly located at 125 North Pioneer Street in Herriman, was built circa 1883.  The photograph was taken circa 1938, and you can see an employee of the Salt Lake County Assessor’s office at the right. He is holding the chalkboard documenting the tax number for the property
-        A stone granary with wood shingles, built circa 1888. </div>
-      <div class="blurb">Herriman Today 2022.</div>
-      <picture class="discoverPic"
-        ><img
-          src="images/Aerial-Herriman-Howl-2017.png"
-          alt="Herriman today"
-          class="discoverImg"
-          data-src="images/Aerial-Herriman-Howl-2017.png"
-      /></picture>
+
+   <!--Main Content-->
+   <main class="discover">
+    <h2 class="discover-header">Discover Herriman City History and information.</h2>
+        <figure class ="card">
+            <picture>
+                <img src="images/fort-herriman.png" alt="Fort Herriman">            
+            </picture>
+            <figcaption class="caption">
+                <h3>Fort Herriman</h3>
+                <p class="fact">FunFact: Herriman was established in 1851 by Henry Harriman, Thomas Jefferson Butterfield, John Jay Stocking, and Robert Cowan Petty. A fort was established where the community garden is today. The only remnants of Fort Herriman are the two black locust trees that stand where the entrance to the fort once was. </p>
+            </figcaption>
+          </figure>
+        <figure class ="card">
+          <picture>
+              <img src="images/herriman-history.webp" alt="Herriman History">            
+          </picture>
+          <figcaption class="caption">
+              <h3>Herriman History</h3>
+              <p class="fact">FunFact: This is a picture of early Herriman settlers outside a local church. Back then Herriman was just a small community.</p>
+          </figcaption>
+          <figure class ="card">
+            <picture>
+                <img src="images/herriman-overview.webp" alt="Herriman City Hall">            
+            </picture>
+            <figcaption class="caption">
+                <h3>Herriman City population</h3>
+                <p class="fact">FunFact: Our city population is 61,816 in 2022. In 2021 our population was 58,198. Within the year gap we have seen an increase of 3,618 new residents move to Herriman!</p>
+            </figcaption>   
+        </figure>
+
+        <figure class ="card">
+          <picture>
+              <img src="images/lost-house.png" alt="Lost House">            
+          </picture>
+          <figcaption class="caption">
+              <h3>Lost House</h3>
+              <p class="fact">FunFact: This old house in Herriman Utah was one of the homes of the first settlers in Herriman Utah. </p>
+          </figcaption>   
+      </figure>
+      <footer>
+        <div class="logo">
+          <picture>
+            <img src="images/coclogo.jpg" alt="Herriman Chamber of Commerce Logo" />
+          </picture>
+        </div>
+        <div class="col2">
+          <h4 class="logo-label">Herriman Chamber of Commerce</h4>
+  
+          <div class="address">
+            <f5 class="address1">5219 West Armada Way</f5>
+            <f5 class="address2">Herriman, UT 84096</f5>
+          </div>
+        </div>
+        <div class="find-us">
+          <f5 class="email">info@herrimancoc.gov</f5>
+          <f5 class="phone">801-555-5555</f5>
+          <a href="https://www.google.com/maps/d/viewer?mid=1F9UdspojLAmefOus8B6J-j3_FWs&hl=en_US&ll=40.514699930209%2C-112.03158295805815&z=14">Herriman</a>
+        </div>
+  
+        <div class="about">
+          <h5 class="copyright">&copy;<span id="copyright-year"></span></h5>
+          <div class="seperator">|</div>
+          <h5 class="developer">Joe Burner</h5>
+          <div class="seperator">|</div>
+          <h5 class="class-project">WDD 230 Project</h5>
+          <div class="seperator" id="last-seperator">|</div>
+          <h5 id="last-update"></h5>
+          <p id="last-visit-p"> It has been <span id="last-visit"></span> days since your last visit.</p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
