--- a/chamber/index.html
+++ b/chamber/index.html
@@ -105,8 +105,8 @@
             <source media= "sun" srcset="images/sun.webp" width="200px" />
             <img src="images/sun.png" alt="icon of current weather" />
           </picture>
-          <p>Current temp: <span id="temp"></span></p>
-                <p>Wind speed: <span id="speed"></span></p>
+                <p>Current temp: <span id="temp"></span></p>
+                <p>Wind speed: <span id="wind"></span></p>
                 <p>Wind chill: <span id="chill"></span></p>
         </div>
          <div class="news">
