Fixed CSS errors and many improvements added
-Fixed each CSS error
-Resized Social media image icons down
-Removed additional hero content "fluff"
-Removed additional hero images
-Resized city hall image to fit.
-Made many improvements.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,38 +62,35 @@
       <div class="container">
         <div class="hero">
           <div class="attention"><button id="banner"></button></div>
-          <h2>Welcome to Herriman</h2>
           <picture>
             <source
-              media="(max-width:570px)"
-              srcset="images/wdd230-small"
+              media="(max-width: 570px)"
+              srcset="images/Herriman-city600x400.png"
             />
             <source
-              media="(max-width:1024px"
-              srcset="images/wdd230-large"
-              />
-            <!--<img src="images/wdd230-medium.jpg" alt="Place holder image" /> -->
-            <img src="images/Herriman-city.png" alt="Herriman City Hall" width= 500px /> </picture>
+              media="(max-width: 1024px)"
+              srcset="images/Herriman-city1000x500.png"
+            />
+            <img
+              src="images/herriman_city600x400.png"
+              alt="Herriman City Hall"
+            />
+          </picture>
+          <h1>Welcome to Herriman</h1>
           <p>Welcome to City of Herriman, Utah Chamber of Commerce page. Here you will find useful information on events and activities and employment Opportunities within Herriman town limits.</p>
-          <p>We invite you to check us out and see the daily events happening in our community and within the town of Herriman.</p>
-          <picture>
-            <img src="images/herriman-city-hall.webp" alt="Herriman City Hall Park" width= 500px />
-          </picture>
-            <p>Herriman City Hall is where you will find all the public offices for the city of Herriman.</p>
-          <picture>
-            <img src="images/herriman-overview.webp" alt="Herriman overview" width= 500px />
-          </picture>
-          <p>Herriman city overview. We have see a lot of new incoming residents moving to Herriman Utah. Within just 2 miles of shopping and dining, Herriman is sure growing.</p>
-        </div>
+          <p>We invite you to check us out and see the daily events happening in our community and within the town of Herriman. We have see a lot of new incoming residents moving to Herriman Utah. Within just 2 miles of shopping and dining, Herriman is sure growing.</p>
+      </div>
+      
+      
         <div class="event">
           <h2>Herriman Happenings</h2>
           <picture>
             <img
-              src="images/black_ridge.png" alt="Black Ridge" width= 300px/>
+              src="images/TrunkorTreat100x100.png" alt="Halloween"/>
           </picture>
-          <p> Black Ridge Resoivor. Come out for a fun community BBQ on Saturday October 22 2022 at 7pm. </p>
+          <p> Please joins us in our community trunk or treat located at Herriman City Hall October 31 2022 at 7pm. </p>
           <a href="https://zoom.us">
-          <img src="images/town_hall.png" alt="Herriman Town Hall" width= 250px />
+          <img src="images/Town_hall100x100.png" alt="Herriman Town Hall" />
          </a>
          <p>Please join us for our community town hall meeting scheduled for Monday October 24 2022 at 7pm. You can also join via zoom as well. Click on the Town Hall Meeting image to join our community meetings every Tuesday at 7pm. 
          </p>      
@@ -105,12 +102,12 @@
             <source media= "sun" srcset="images/sun.webp" width="200px" />
             <img src="images/sun.png" alt="icon of current weather" />
           </picture>
-                <p>Current temp: <span id="temp"></span></p>
-                <p>Wind speed: <span id="wind"></span></p>
-                <p>Wind chill: <span id="chill"></span></p>
-        </div>
+          <p>Current temp: <span id="temp"></span></p>
+          <p>Wind speed: <span id="speed"></span></p>
+          <p>Wind chill: <span id="chill"></span></p>
+      </div>
          <div class="news">
-          <h2>Herriman History</h2>
+          <h1>Herriman History</h1>
           <picture>
             <img src="images/Herriman-utah.webp" alt="Herriman Utah" width= 600px />
           </picture>
@@ -158,9 +155,8 @@
         </div>
         <div class="join">
           <button>
-            <a href="https://herriman.applicantpro.com/jobs/">Open Opportunities</a></li>
+            <a href="https://herriman.applicantpro.com/jobs/">Employment Opportunities</a></li>
           </button>
-          <h2>Employment Opportunities</h2>
         <img src="images/Herriman-police.webp" alt="employment" width= "300px" />
         <p>Are you looking for a career change? Interested in working for the town of Herriman? We have several opportunities awaiting you. Please click on join us at the top to see current employment opprtunities within Herriman.</p>
         <img src="images/herrimanpublic.webp" alt="employment" width="300px" />
@@ -181,7 +177,7 @@
         </picture>
       </div>
       <div class="col2">
-        <h4 class="logo-label">Herriman Chamber of Commerce</h4>
+        <h1 class="logo-label">Herriman Chamber of Commerce</h1>
 
         <div class="address">
           <f5 class="address1">5219 West Armada Way</f5>
