Updated Discover page fix

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
     <script src="js/discover_script.js" defer></script>
-    <script src="js/current_date.js" defer></script>
     <script src="js/lazyload.js" defer></script>
+    <script src="js/current_date.js" defer></script>
     <script src="js/lastvisit.js" defer></script>
   </head>
   <body>
@@ -25,8 +25,7 @@
         </picture>
       </div>
       <div class="headings">
-        <h1 class="headings1">Herriman</h1>
-        <h2 class="headings2">Chamber of Commerce</h2>
+        <h1 class="headings1">Herriman Chamber of Commerce</h1>
       </div>
 
       <div class="social" id="facebook">
