--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -49,7 +49,7 @@
           <button id="hamburgerBtn">&#9776;</button>
           <ul id="primaryNav">
             <li><a href="https://mjburn0428.github.io/WDD230/chamber/">Main</a></li>
-            <li><a href="discover.html">Discover Herriman</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover">Discover Herriman</a></li>
             <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
             <li><a href="https://herriman.applicantpro.com/jobs/">Join Us</a></li>
           </ul>
