Updated Discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -60,7 +60,7 @@
 
    <!--Main Content-->
    <main class="discover">
-    <h2 class="discover-header">Discover Herriman City History and information.</h2>
+    <h2 class="discover-header">Herriman Utah History and Information</h2>
         <figure class ="card">
             <picture>
                 <img src="images/fort-herriman.png" alt="Fort Herriman">            
@@ -97,6 +97,15 @@
               <p class="fact">FunFact: This old house in Herriman Utah was one of the homes of the first settlers in Herriman Utah. </p>
           </figcaption>   
       </figure>
+      <figure class ="card">
+        <picture>
+            <img src="images/Herriman-early-farm (2).png" alt="Herriman Early Farm">            
+        </picture>
+        <figcaption class="caption">
+            <h3>Herriman Farm in early days</h3>
+            <p class="fact">FunFact: This was a farm in the early settler days of Herriman Utah.  </p>
+        </figcaption>   
+    </figure>
       <footer>
         <div class="logo">
           <picture>
