--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2>Week 7 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson07/lazyload">Lazy Load | <a href="https://mjburn0428.github.io/WDD230/chamber/discover">Discover Herriman</a></li>
             <h2>Week 8 Lessons</h2>
-            <li><a href="lesson10/">Week 8 Lesson</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson08/">Table</a></li>
             <h2>Week 9 Lessons</h2>
             <li><a href="lesson10/">Week 9 Lesson</a></li>
             <h2>Week 10 Lessons</h2>
