Updated Links and file structure

--- a/chamber/contact/thanks.html
+++ b/chamber/contact/thanks.html
@@ -49,11 +49,10 @@
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
           <li><a href="#">Main</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover/">Discover Herriman</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover/">Discover Herriman</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover/">Discover Herriman</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover/discover">Discover Herriman</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact Us</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
-          <li><a href="https://herriman.applicantpro.com/jobs/">Join Us</a></li>
+          <li><a href="https://herriman.applicantpro.com/jobs/">Employment Opportunities</a></li>
         </ul>
       </nav>
 
