--- a/chamber/home/index.html
+++ b/chamber/home/index.html
@@ -50,8 +50,9 @@
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
           <li><a href="#">Main</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover/discover">Discover Herriman</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover Herriman</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact Us</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join Us</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
           <li><a href="https://herriman.applicantpro.com/jobs/">Employment Opportunities</a></li>
         </ul>
@@ -163,13 +164,11 @@
         <img src="images/herrimanpublic.webp" alt="employment" width="300px" />
         <p>We offer excellent benefits with our opportunities within the City of Herriman.</p>
       </div>
-      <section id="join">
-        <div id="joinButton">
-          <button onclick="window.location.href= 'https:/mjburn0428.github.io/WDD230/chamber/join';">
-            Join Us
-          </button>
-          <p>Click to see how joining the Herriman City Chamber of Commerece can help your business.</p>
-        </body>
+      <div class="Join">
+        <h1 style="text-align:center;">Join Us</h1>
+        <a href="https://https://mjburn0428.github.io/WDD230/chamber/discovery/discover">
+            <button class="btn btn-primary btn-lg">Join us</button>
+        </a>
       </html>
     </section>        
 </main>
