--- a/chamber/join/join.html
+++ b/chamber/join/join.html
@@ -49,8 +49,9 @@
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
           <li><a href="#">Main</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover/discover">Discover Herriman</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover Herriman</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact Us</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join Us</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
           <li><a href="https://herriman.applicantpro.com/jobs/">Employment Opportunities</a></li>
         </ul>
