--- a/lesson08/tablebuild.html
+++ b/lesson08/tablebuild.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table</title>
+    <title>Week 08 Table</title>
     <link rel="stylesheet" href="./tablebuild.css">
 </head>
 <body>
