Updated home section w/correct links

--- a/chamber/home/index.html
+++ b/chamber/home/index.html
@@ -49,12 +49,12 @@
       <nav>
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
-          <li><a href="#">Main</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover Herriman</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact Us</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join Us</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/home/">Home</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
-          <li><a href="https://herriman.applicantpro.com/jobs/">Employment Opportunities</a></li>
+          <li><a href="https://herriman.applicantpro.com/jobs/">Careers</a></li>
         </ul>
       </nav>
 
@@ -164,11 +164,9 @@
         <img src="images/herrimanpublic.webp" alt="employment" width="300px" />
         <p>We offer excellent benefits with our opportunities within the City of Herriman.</p>
       </div>
-      <div class="Join">
-        <h1 style="text-align:center;">Join Us</h1>
-        <a href="https://https://mjburn0428.github.io/WDD230/chamber/discovery/discover">
-            <button class="btn btn-primary btn-lg">Join us</button>
-        </a>
+      <div class="join_2">
+        <button><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join Us!</a></button>
+        <p>Click on Join Us above to learn how the City of Herriman Chamber of Commerce can help your business out.</p>
       </html>
     </section>        
 </main>
