Updated w/correct links

--- a/chamber/contact/contact.html
+++ b/chamber/contact/contact.html
@@ -48,12 +48,12 @@
       <nav>
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
-          <li><a href="#">Main</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover Herriman</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact Us</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join Us</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/home/">Home</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
-          <li><a href="https://herriman.applicantpro.com/jobs/">Employment Opportunities</a></li>
+          <li><a href="https://herriman.applicantpro.com/jobs/">Careers</a></li>
         </ul>
       </nav>
 
