--- a/chamber/discovery/discover.html
+++ b/chamber/discovery/discover.html
@@ -60,53 +60,50 @@
       <div class="headerDate"></div>
     </header>
 
-   <!--Main Content-->
-   <main class="discover">
-    <h2 class="discover-header">Herriman Utah History and Information</h2>
-        <figure class ="card">
-            <picture>
-                <img src="images/fort-herriman.png" alt="Fort Herriman">            
-            </picture>
-            <figcaption class="caption">
-                <h3>Fort Herriman</h3>
-                <p class="fact">FunFact: Herriman was established in 1851 by Henry Harriman, Thomas Jefferson Butterfield, John Jay Stocking, and Robert Cowan Petty. A fort was established where the community garden is today. The only remnants of Fort Herriman are the two black locust trees that stand where the entrance to the fort once was. </p>
-            </figcaption>
-          </figure>
-        <figure class ="card">
-          <picture>
-              <img src="images/herriman-history.webp" alt="Herriman History">            
-          </picture>
-          <figcaption class="caption">
-              <h3>Herriman History</h3>
-              <p class="fact">FunFact: This is a picture of early Herriman settlers outside a local church. Back then Herriman was just a small community.</p>
-          </figcaption>
-          <figure class ="card">
-            <picture>
-                <img src="images/herriman-overview.webp" alt="Herriman City Hall">            
-            </picture>
-            <figcaption class="caption">
-                <h3>Herriman City population</h3>
-                <p class="fact">FunFact: Our city population is 61,816 in 2022. In 2021 our population was 58,198. Within the year gap we have seen an increase of 3,618 new residents move to Herriman!</p>
-            </figcaption>   
-        </figure>
+    <main class="discover-main">
+      <div class="history">
+          <h2>Fort Herriman</h2>
+          <img src="images/fort-herriman.png" alt="Fort Herriman">
+          <p>Fort Herriman
+            FunFact: Herriman was established in 1851 by Henry Harriman, Thomas Jefferson Butterfield, John Jay Stocking, and Robert Cowan Petty. A fort was established where the community garden is today. The only remnants of Fort Herriman are the two black locust trees that stand where the entrance to the fort once was
+          </p>
+      </div>
+      <div class="herriman-church">
+          <h2>Herriman Utah Church</h2>
+          <img src="images/herriman-history.webp" alt="Herriman History Church">
+          <p>In Herriman's earleist days, chruch congregations were building around Herriman. Religion was importnant to early settlers in Herriman, and religion is pretty active to this day.
+              <br>
+              Even in present day The Church of Jesus Christ of Latter Day Saints has a lot of chruch meetinghouses across Herriman. 
+              <br>
+              FunFact: There are approximately 26 LDS meetinghouses in Herriman Utah.
+          </p>
+      </div>
+      <div class="lost-house">
+          <h2></h2>
+          <img src="images/lost-house.png" alt="lost house in Herriman">
+          <p>FunFact: This old house in Herriman Utah was one of the homes of the first settlers in Herriman Utah. 
+            <br>
+            Not much is known about the lost-house in Herriman Utah, but more data will be added once research has been conducted.
+          </p>
+      </div>
+      <div class="herriman-farm">
+          <h2>Farm in early days of Herriman</h2>
+          <img src="images/Herriman-early-farm (2).png" alt="Farm in early Herriman Days">
+          <p>FunFact: This was a farm in the early settler days of Herriman Utah.
+              <br>
+              Herriman Utah in the early days used to be a lot of farm land, local farmers would sell their crops to make money in the early days of Herriman.
+          </p>
+      </div>
+      <div class="today">
+          <h2>Herriman Utah Modern day</h2>
+          <img src="images/herriman-overview.png"  alt="Modern Day Herriman">
+          <p> Modern day Herriman is continuing to grow each day. There are several businesses in and around Herriman, as well as local parks and attractions.
+            <br>
+            FunFact: Our city population is 61,816 in 2022. In 2021 our population was 58,198. Within the year gap we have seen an increase of 3,618 new residents move to Herriman!
+          </p>
+      </div>
 
-        <figure class ="card">
-          <picture>
-              <img src="images/lost-house.png" alt="Lost House">            
-          </picture>
-          <figcaption class="caption">
-              <h3>Lost House</h3>
-              <p class="fact">FunFact: This old house in Herriman Utah was one of the homes of the first settlers in Herriman Utah. </p>
-          </figcaption>   
-      </figure>
-      <figure class ="card">
-        <picture>
-            <img src="images/Herriman-early-farm (2).png" alt="Herriman Early Farm">            
-        </picture>
-        <figcaption class="caption">
-            <h3>Herriman Farm in early days</h3>
-            <p class="fact">FunFact: This was a farm in the early settler days of Herriman Utah.  </p>
-        </figcaption>   
+  </main>   
     </figure>
       <footer>
         <div class="logo">
