Updated contact form

--- a/chamber/contact/contact.html
+++ b/chamber/contact/contact.html
@@ -73,7 +73,7 @@
         <fieldset>
             <legend class="formHead">Comments</legend>
             <label class="textArea">Comment
-                <textarea id="describe" name="describe" rows="4" cols="50" maxlength="250" placeholder="Please provide a short comment/Question here."></textarea>
+                <textarea id="describe" name="describe" rows="4" cols="50" maxlength="250" placeholder="Please provide a short comment/question here."></textarea>
             </label>
         
         </fieldset>
