--- a/chamber/contact/thanks.html
+++ b/chamber/contact/thanks.html
@@ -48,7 +48,7 @@
       <nav>
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/index">Home</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/home/">Home</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join</a></li>
