--- a/chamber/contact/thanks.html
+++ b/chamber/contact/thanks.html
@@ -81,13 +81,14 @@
         <h1 class="logo-label">Herriman Chamber of Commerce</h1>
 
         <div class="address">
-          <f5 class="address1">5219 West Armada Way</f5>
-          <f5 class="address2">Herriman, UT 84096</f5>
+          <h5 class="address1">5219 West Armada Way</h5>
+          <h5 class="address2">Herriman, UT 84096</h5>
         </div>
       </div>
       <div class="find-us">
-        <f5 class="email">info@herrimancoc.gov</f5>
-        <f5 class="phone">801-555-5555</f5>
+        <h5 class="email">info@herrimancoc.gov</h5>
+        <h5 class="phone">801-555-5555</h5>
+        <p>
         <span class="mapIcon"><img src="images/mapicon.png" alt="map icon"></span>
         <a 
         href="https://www.google.com/maps/d/viewer?mid=1F9UdspojLAmefOus8B6J-j3_FWs&hl=en_US&ll=40.514699930209%2C-112.03158295805815&z=14">
