Updated submission text

--- a/chamber/join/thanks.html
+++ b/chamber/join/thanks.html
@@ -62,7 +62,7 @@
    <!-- CONTENT HERE -->
 <main class="thanks">
 
-    <h1>Comment submitted Succesfully</h1>
+    <h1>Application submitted succesfully</h1>
     <p>Thank you. We will get back to you within 24-48 hours to process your request to join Herriman Chamber of Commerce.</p>
 
 
