--- a/chamber/index.html
+++ b/chamber/index.html
@@ -196,8 +196,14 @@
         </p>
       </div>
 
-      <div>
-           &copy; <span id="year"></span> | Herriman Chamber of Commerce | Joe Burner | WDD 230 | BYU-I   
+      
+     <div class="about">
+        <h5 class="copyright">&copy;<span id="copyright-year"></span></h5>
+        <div class="seperator">|</div>
+        <h5 class="developer">Joe Burner</h5>
+        <div class="seperator">|</div>
+        <h5 class="class-project">WDD 230 Project</h5>
+        <div class="seperator" id="last-seperator">|</div>
         <h5 id="last-update"></h5>
         <p id="last-visit-p"> It has been <span id="last-visit"></span> days since your last visit.</p>
       </div>
