--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2>Week 8 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson08/tablebuild.html">Table Build | <a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Chamber Join</a></li>
             <h2>Week 9 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/lesson09/prophets.html">Fetch and JSON API</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson09/prophets.html">Latter-Day Prophets/API/JSON</a></li>
             <h2>Week 10 Lessons</h2>
             <li><a href="lesson10/">Week 10 Lesson</a></li>
             <h2>Week 11 Lessons</h2>
