--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,9 +50,9 @@
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/index">Home</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact/contact">Contact</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Join</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover">Discover</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact">Contact</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/join">Join</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
           <li><a href="https://herriman.applicantpro.com/jobs/">Careers</a></li>
         </ul>
@@ -196,8 +196,7 @@
         </p>
       </div>
 
-      
-     <div class="about">
+      <div class="about">
         <h5 class="copyright">&copy;<span id="copyright-year"></span></h5>
         <div class="seperator">|</div>
         <h5 class="developer">Joe Burner</h5>
