--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <h2>Week 6 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/chamber/index">Chamber of Commerce Continued</a></li>
             <h2>Week 7 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/lesson07/lazyload">Lazy Load | <a href="https://mjburn0428.github.io/WDD230/chamber/discovery/discover">Discover Herriman</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson07/lazyload">Lazy Load | <a href="https://mjburn0428.github.io/WDD230/chamber/discover">Discover Herriman</a></li>
             <h2>Week 8 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/lesson08/tablebuild.html">Table Build | <a href="https://mjburn0428.github.io/WDD230/chamber/join/join">Chamber Join</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson08/tablebuild.html">Table Build | <a href="https://mjburn0428.github.io/WDD230/chamber/join">Chamber Join</a></li>
             <h2>Week 9 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/lesson09/prophets.html">Latter-Day Prophets/API/JSON</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson09/prophets.html">Fetch and JSON API</a></li>
             <h2>Week 10 Lessons</h2>
             <li><a href="lesson10/">Week 10 Lesson</a></li>
             <h2>Week 11 Lessons</h2>
