--- a/lesson09/prophets.html
+++ b/lesson09/prophets.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latter Day Prophets</title>
-    <link href="images/favicon.ico" rel="favicon">
-    <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="images/android-chrome-512x512.png" rel="android-chrome">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="images/android-chrome-512x512.png">
     <link href="css/prophets.css" rel="stylesheet">
     <script src="js/prophets.js" defer></script>
 </head>
