--- a/lesson09/prophets.html
+++ b/lesson09/prophets.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latter Day Prophets</title>
-    
+    <title>Working with JSON data and the Fetch API</title>
+
     <link href="css/prophets.css" rel="stylesheet">
     <script src="js/prophets.js" defer></script>
 </head>
@@ -18,8 +18,8 @@
         <div class="cards"></div>
       </main>
       <footer>
-        Joe Burner |  BYU-I  | WDD 230
+        Joe Burner |  BYU-I | WDD 230
       </footer>
-    
+
 </body>
 </html>
