--- a/lesson09/prophets.html
+++ b/lesson09/prophets.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Working with JSON data and the Fetch API</title>
-
+    <title>Latter Day Prophets</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
     <link href="css/prophets.css" rel="stylesheet">
     <script src="js/prophets.js" defer></script>
 </head>
