--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -63,14 +63,14 @@
     <main class="discover-main">
       <div class="history">
           <h2>Fort Herriman</h2>
-          <img src="images/fort-herriman.png" alt="Fort Herriman">
+          <img class="lazy" src="images/fort-herriman.png" data-src="fort-herriman" >
           <p>Fort Herriman
             FunFact: Herriman was established in 1851 by Henry Harriman, Thomas Jefferson Butterfield, John Jay Stocking, and Robert Cowan Petty. A fort was established where the community garden is today. The only remnants of Fort Herriman are the two black locust trees that stand where the entrance to the fort once was
           </p>
       </div>
       <div class="herriman-church">
           <h2>Herriman Utah Church</h2>
-          <img src="images/herriman-history.webp" alt="Herriman History Church">
+          <img class="lazy" src="images/herriman-history.webp" data-src="herriman-church">
           <p>In Herriman's earleist days, chruch congregations were building around Herriman. Religion was importnant to early settlers in Herriman, and religion is pretty active to this day.
               <br>
               Even in present day The Church of Jesus Christ of Latter Day Saints has a lot of chruch meetinghouses across Herriman. 
@@ -80,7 +80,7 @@
       </div>
       <div class="lost-house">
           <h2></h2>
-          <img src="images/lost-house.png" alt="lost house in Herriman">
+          <img class="lazy" src="images/lost-house.png" data-src="lost-house">
           <p>FunFact: This old house in Herriman Utah was one of the homes of the first settlers in Herriman Utah. 
             <br>
             Not much is known about the lost-house in Herriman Utah, but more data will be added once research has been conducted.
@@ -88,7 +88,7 @@
       </div>
       <div class="herriman-farm">
           <h2>Farm in early days of Herriman</h2>
-          <img src="images/Herriman-early-farm (2).png" alt="Farm in early Herriman Days">
+          <img class="lazy" src="images/Herriman-early-farm (2).png" data-src="herriman-farm">
           <p>FunFact: This was a farm in the early settler days of Herriman Utah.
               <br>
               Herriman Utah in the early days used to be a lot of farm land, local farmers would sell their crops to make money in the early days of Herriman.
@@ -96,7 +96,7 @@
       </div>
       <div class="today">
           <h2>Herriman Utah Modern day</h2>
-          <img src="images/herriman-overview.png"  alt="Modern Day Herriman">
+          <img class="lazy" src="images/herriman-overview.png" data-src="herriman-today">
           <p> Modern day Herriman is continuing to grow each day. There are several businesses in and around Herriman, as well as local parks and attractions.
             <br>
             FunFact: Our city population is 61,816 in 2022. In 2021 our population was 58,198. Within the year gap we have seen an increase of 3,618 new residents move to Herriman!
