--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <h2>Week 8 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson08/tablebuild.html">Table Build | <a href="https://mjburn0428.github.io/WDD230/chamber/join">Chamber Join</a></li>
             <h2>Week 9 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/lesson09/prophets">Fetch and JSON API | <a href="https://mjburn0428.github.io/WDD230/chamber/directory">Chamber Directory</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson09/prophets">Fetch and JSON API</a></li>
             <h2>Week 10 Lessons</h2>
-            <li><a href="lesson10/">Week 10 Lesson</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson10/weather-api">Week 10 Lesson</a></li>
             <h2>Week 11 Lessons</h2>
             <li><a href="lesson10/">Week 11 Lesson</a></li>
             <h2>Week 12 Lessons</h2>
