Updated for Weather API

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -88,26 +88,26 @@
           <h2>Herriman Happenings</h2>
           <picture>
             <img
-              src="images/TrunkorTreat100x100.png" alt="Halloween"/>
+              src="images/Herriman_Holiday.png" alt="Holiday_Market"/>
           </picture>
-          <p> Please joins us in our community trunk or treat located at Herriman City Hall October 31 2022 at 7pm. </p>
+          <p>The Herriman Holiday Marketplace is returning to the W & M Butterfield Park Rosecrest Pavilion November 18-19, 2022. More than 80 local vendors and food trucks will be on hand with holiday goods in addition to a Santa photo op, a giving tree, and more! </p>
           <a href="https://zoom.us">
           <img src="images/Town_hall100x100.png" alt="Herriman Town Hall" />
          </a>
          <p>Please join us for our community town hall meeting scheduled for Monday October 24 2022 at 7pm. You can also join via zoom as well. Click on the Town Hall Meeting image to join our community meetings every Tuesday at 7pm. 
          </p>      
         </div>
-        
+
         <div class="weather">
-          <h2>Weather</h2>
-          <picture id="weather-icon">
-            <source media= "sun" srcset="images/sun.webp" width="200px" />
-            <img src="images/sun.png" alt="icon of current weather" />
-          </picture>
-          <p>Current temp: <span id="temp"></span></p>
-          <p>Wind speed: <span id="speed"></span></p>
-          <p>Wind chill: <span id="chill"></span></p>
+          <h2>Herriman, Utah Weather</h2>
+          <img id="weatherIcon" src="" alt="">
+          <h4 id="condition"></h4>
+          <hr>
+          <p>Temperature: <span id="temp"></span> &#8457;<br>
+            Wind Speed: <span id="windSpeed"></span> mph <br>
+          Wind Chill: <span id="windChill"></span> &#8457;</p>
       </div>
+
          <div class="news">
           <h1>Herriman History</h1>
           <picture>
