--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Week 9 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson09/prophets">Fetch and JSON API</a></li>
             <h2>Week 10 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/lesson10/weather-api">Weather API | </a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson10/weather-api">FairBanks Weather API | <a href="https://mjburn0428.github.io/WDD230/chamber/index">Chamber of Commerce (W10)</a> </a></li>
             <h2>Week 11 Lessons</h2>
             <li><a href="lesson10/">Week 11 Lesson</a></li>
             <h2>Week 12 Lessons</h2>
